namespace java de.dwi.demo.thrift.model

enum StopAreaType {
 A = 1,
 B = 2,
}